--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+    <groupId>com.alibaba.cloud.ai</groupId>
+    <artifactId>spring-ai-alibaba-starter</artifactId>
+    <version>1.0.0-M6.1</version>
+</dependency>
     </dependencies>
 
     <build>
